--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Imports:
     methods,
     DBI (>= 0.5),
     curl,
-    data.table (>= 1.10.4)
+    data.table
 Encoding: UTF-8
 License: LGPL (>= 2)
 URL: https://github.com/hannesmuehleisen/clickhouse-r
