--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: clickhouse
-Version: 0.0.2
+Version: 0.0.4
 Title: clickhouse Interface for R
-Author: Hannes Muehleisen [aut, cre]
-Maintainer: Hannes Muehleisen <hannes@cwi.nl>
+Author: Hannes Muehleisen [aut, cre], Kislenok Roman
+Maintainer: Hannes Muehleisen <hannes@cwi.nl>, Kislenok Roman <kislenok.roman@gmail.com>
 Description: This package provoides an interface to the clickhouse database compliant with the DBI package.
 Depends:
-    R (>= 3.1.0)
+    R (>= 3.1.0),
+    digest
 Suggests:
     testthat,
     DBItest
